Add improved draft of READMEs, include install instructions, snippets, demos...