@@ -1,68 +1,116 @@
-# jinfer in a few lines (jbang)
+# Jinfer JBang demos
 
-Single-file demos of what jinfer does that other local engines mostly don't. Every script is
-runnable as-is and does its work **in-process** — no server, no Python, no JNI glue.
+[![Java 25+](https://img.shields.io/badge/Java-25%2B-007396?logo=java&logoColor=white)](https://openjdk.org/projects/jdk/25/)
+[![License: Apache 2.0](https://img.shields.io/badge/License-Apache%202.0-green.svg?logo=apache)](../../LICENSE)
+
+**Local LLM inference inside your JVM. No server. No Python. No external processes.**
+
+## Run
+
+Each script declares the Jinfer BOM, its API, the required model provider and optional runtime
+backends:
+
+```java
+//JAVA 25
+//RUNTIME_OPTIONS --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED
+//DEPS com.qxotic:jinfer-bom:0.1.0@pom
+//DEPS com.qxotic:jinfer-langchain4j com.qxotic:jinfer-llama
+//DEPS com.qxotic:jam-native com.qxotic:jam-vector
+```
+
+The demos use hand-picked providers: Llama for chat, Gemma for vision, Qwen3 for retrieval and
+Inflect for speech. Use `jinfer-models-all` in a Maven application when classpath size does not
+matter.
+
+Install [JBang](https://www.jbang.dev/), then run a script from a repository checkout:
 
 ```bash
-cd ../.. && mvn -q -DskipTests install    # publish jinfer to ~/.m2 once
+cd jinfer/examples/scripts
 jbang Chat.java "Explain HTTP/3 in two sentences."
 ```
 
-The defaults are complete Hugging Face references, resolved through jinfer's model store. Pass a
-local path, URL or another hub reference as the trailing model argument to override one. Downloaded
-models are kept in jinfer's local model cache.
+The scripts request Java 25 and download their default model on first use. Models remain in the
+Jinfer cache. Pass another model reference as the final argument to override a default.
 
-| script | shows | model |
-|---|---|---|
-| `Chat.java` | streaming chat, token by token | Llama-3.2-1B |
-| `Json.java` | **grammar-constrained** JSON — malformed output is unrepresentable | Llama-3.2-1B |
-| `Speak.java` | text to speech from a 4 MB model | Inflect-Nano-v2 |
-| `Search.java` | semantic search, no vector database | Qwen3-Embedding-0.6B |
-| `Rerank.java` | cross-encoder reranking, the second stage of RAG | Qwen3-Reranker-0.6B |
-| `CachedPrompt.java` | prompt caching, with restored-token accounting | Llama-3.2-1B |
-| `Detect.java` | object detection with the boxes **drawn** on the image | Gemma 4 12B + mmproj |
+## Demos
 
-## Vision
-
-`Detect.java` is the Gemma detection guide, ported and finished: the model returns normalized
-0-1024 boxes as JSON, and the script rescales them onto the real pixels and writes `detected.png`.
+### Streaming chat
 
 ```bash
-jbang Detect.java photo.jpg "person, dog, bicycle"
+jbang Chat.java "Invent a tiny language for talking to houseplants."
 ```
 
-Detection is prompt-driven — the same model that describes an image localizes in it, so there is no
-detector to train, load or wire up. Two things that cost me time and are now handled:
+Tokens stream to the terminal as they are generated.
 
-- **Field order is not stable.** `box_2d` comes before `label` about as often as after, so the
-  parser reads each object's fields independently instead of assuming a layout. The first version
-  assumed one and silently drew zero boxes on a perfectly good detection.
-- **Detection needs a bigger model than description does.** E2B labels correctly and places badly —
-  asked for the llama and the mug, it named both right and put the llama's box inside the mug. 12B
-  places both correctly from the same prompt and the same code, so `Detect.java` defaults to 12B.
-  Every other vision script here is fine on E2B.
+### Constrained JSON
 
-## The two worth reading first
-
-**`Json.java`** — the grammar constrains *sampling*, so the model cannot emit a token that breaks
-the schema. Not "please reply in JSON" plus a retry loop; the invalid output does not exist.
-
+```bash
+jbang Json.java "Ada Lovelace, born 1815 in London, wrote the first algorithm."
 ```
+
+```json
 {"name": "Ada Lovelace", "year": 1815, "city": "London"}
 ```
 
-**`Rerank.java` next to `Search.java`** — the same corpus, two retrieval stages. Embeddings score
-the whole corpus quickly but flatly (0.518 / 0.482 / 0.480); the cross-encoder reads query and
-document together and separates decisively (0.3675 / 0.0007 / 0.0004). That gap is why real RAG
-pipelines use both.
+The sampler rejects tokens that do not match the grammar.
+
+### Vision and speech
+
+```bash
+jbang Narrate.java photo.jpg
+```
+
+Gemma describes the image, then Inflect synthesizes the description into `narration.wav`.
+
+### Object detection
+
+```bash
+jbang Detect.java street.jpg "person, bicycle, traffic light"
+```
+
+The model returns normalized boxes. Java2D scales and paints them into `detected.png`.
+
+| Script | Demonstrates | Model |
+|---|---|---|
+| `Chat.java` | streaming chat, token by token | Llama-3.2-1B |
+| `Json.java` | grammar-constrained JSON | Llama-3.2-1B |
+| `Speak.java` | text to speech from a 4 MB model | Inflect-Nano-v2 |
+| `Narrate.java` | image to description to spoken WAV in one JVM | Gemma 4 E2B + Inflect |
+| `Search.java` | semantic search, no vector database | Qwen3-Embedding-0.6B |
+| `Rerank.java` | cross-encoder reranking, the second stage of RAG | Qwen3-Reranker-0.6B |
+| `CachedPrompt.java` | prompt caching, with restored-token accounting | Llama-3.2-1B |
+| `Detect.java` | object detection with boxes drawn on the image | Gemma 4 12B + projector |
+| `Logic.java` | yes/no logic puzzles, scored by exact match | Llama-3.2-1B |
+
+## Logic puzzle scoring
+
+```bash
+jbang Logic.java
+```
+
+Each puzzle describes truth-tellers and liars, then asks three yes/no questions. A GBNF grammar
+restricts the response to a comma-separated answer. The script normalizes whitespace, checks the
+answer directly and prints a final score. No judge model is involved.
+
+## Semantic retrieval and reranking
+
+```bash
+jbang Search.java "what causes coffee bitterness?"
+jbang Rerank.java "what causes coffee bitterness?"
+```
+
+`Search.java` ranks documents by embedding similarity. `Rerank.java` scores each query and document
+together. Neither requires a vector database or reranking service.
+
+## Prompt-cache reuse
+
+```bash
+jbang CachedPrompt.java
+```
+
+Each answer reports how many prompt tokens were restored from the cache.
 
 ## Notes
 
-`Models.java` only holds the shared default model references — it is pulled in via `//SOURCES`.
-
-`CachedPrompt.java` reports restored prompt tokens from the response itself. It intentionally avoids
-a tiny wall-clock benchmark, where model loading, JIT warmup and the ordinary block cache obscure
-the feature being demonstrated.
-
-Native matmul is used automatically when `libjam` is on the path; otherwise the Java Vector backend
-runs and everything still works, slower.
+`Models.java` holds the shared model references. The scripts include `jam-native` and `jam-vector`;
+Jinfer selects the native backend when supported and otherwise uses the Java Vector backend.
